--- a/items/ss2010_1.html
+++ b/items/ss2010_1.html
@@ -23,23 +23,24 @@
 
   <!-- CSS: implied media=all -->
   <!-- CSS concatenated and minified via ant build script-->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" type="text/css" href="../css/carouselskin/skin.css" />
   <!-- end CSS-->
 
   <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
 
   <!-- All JavaScript at the bottom, except for Modernizr / Respond.
        Modernizr enables HTML5 elements & feature detects; Respond is a polyfill for min/max-width CSS3 Media Queries
-       For optimal performance, use a custom Modernizr build: www.modernizr.com/download/ -->
-  <script src="js/libs/modernizr-2.0.6.min.js"></script>
 
+       For optimal performance, use a custom Modernizr build: www.modernizr.com/download/ -->
+
+<script src="js/libs/modernizr-2.0.6.min.js"></script>
 
 </head>
 
-<body class="studio">
+<body class="col item">
 
   <div id="container">
-	<div id="empty">&nbsp;</div>
     <div id="header">
 		<h1 id="faren"><span>Faren</span></h1>
 		<ul id="links">
@@ -49,47 +50,49 @@
 			<li><a>BLOG</a></li>
 		</ul>
     </div>
+
+
+<div id="collections">
+</div>
+
+<div id="seasons">
+	<div id="itemnav">
+		<a href="#">BACK</a>&nbsp;|&nbsp;
+		<a href="#">PREVIOUS</a>&nbsp;|&nbsp;
+		<a href="#">NEXT</a>
+	</div>
+		<!-- <div id="holder">
+				<span>COLLECTIONS </span><br /><br/>
+				<span>SPRING/SUMMER</span> -->
+				<!-- <p class="show more" data-ref="ss2009">2009</p> -->
+				<!-- <p class="show more" data-ref="ss2010">2010</p> -->
+				<!-- <p class="show more" data-ref="ss2011">2011</p> -->
+				<!-- <br/>
+								<span>FALL/WINTER</span>
+								<p class="show more" data-ref="fw2009">2009</p>
+								<p class="show more" data-ref="fw2010">2010</p>
+								<p class="show more" data-ref="fw2012">2012</p>
+								<br/> -->
+				<!-- <p class="show more" data-ref="acc">ACCESSORIES</a> -->
+			<!-- </div> -->
+	
+	
     <div id="main" role="main">
-		<div id="videos">
-			<h1>WATCH VIDEOS</h1>
-			<p>Behind the scenes at the Spring/Summer 2010 Lookbook photo shoot.</p>
-			<div id="iframe"><iframe src="http://player.vimeo.com/video/10492302?byline=0&amp;portrait=0" width="440" height="292" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
+		<div id="ss2010" class="season">
+			<ul id="ss2010_1" class="jcarousel-skin-tango">
+				<li id="first"><a href=""><img src="../img/collections/ss2010/1.jpg" alt=""></a></li>
+				<li><a href=""><img src="../img/collections/ss2010/2A.jpg" alt=""></a></li>
+				<li><a href=""><img src="../img/collections/ss2010/2B.jpg" alt=""></a></li>
+			</ul>
 		</div>
-		<div id="more">
-			<div id="latest">
-				<h2>THE LATEST</h2>
-				<p><a href="">TWITTER</a></p>
-				<p><a href="">FACEBOOK</a></p>
-				<p><a href="">TUMBLR</a></p>
-				<p><a href="">BLOG</a></p>
-			</div>
-			<div id="app">
-				<h2>APP</h2>
-				<div id="text">
-					<p>Download the Faren App for iPhone and iPad and always be up to date</p>
-				</div>
-				<div id="img">
-					<img src="img/app_logo.png">
-				</div>
-			</div>
-			<div id="press">
-				<h2>PRESS</h2>
-				<img src="img/elle.jpg">
-			</div>
-		</div>
-		<div id="twitter">
-			<h2>TWITTER</h2>
-			<div id="twitter_m">
-		   		<div id="twitter_container">
-		       		<ul id="twitter_update_list"></ul>
-					<!-- <div id="follow"><p>FOLLOW <a href="">@Faren</a></p> -->
-		   		</div>
-			</div>
-		</div>
-    </div>
+		<div id="info">
+			<h3>FAREN</h3>
+			<p>Charcoal charmeuse tank with suede neck + rivets<br/>Silk mesh Bodysuit<br/>Thai style short with suede trim pull-through<br/>Jewellery by Alynne Lavigne
+			</p>			
+		</div>	    
+	</div>
 	
-	
-	
+</div>
     <footer>
 		<ul id="left">
 			<li>&copy;FAREN</li>
@@ -107,17 +110,30 @@
   </div> <!--! end of #container -->
 
 
-  <!-- JavaScript at the bottom for fast page loading -->
-  <script src="http://twitter.com/javascripts/blogger.js" type="text/javascript"></script>
-  <script src="http://twitter.com/statuses/user_timeline/zachaysan.json?callback=twitterCallback2&count=8" type="text/javascript"></script>
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="../js/libs/jquery-1.6.2.min.js"><\/script>')</script>
+
+  <!-- JavaScript at the bottom for fast page loading -->
+<script src="../js/libs/jquery-1.6.2.min.js"></script>
+<script type="text/javascript" src="../js/libs/jquery.jcarousel.js"></script>
+<script type="text/javascript">
+jQuery(document).ready(function() {
+    $('#ss2010_1').jcarousel({
+        // Configuration goes here
+    });
+});
+</script>
+<script type="text/javascript" src="../js/faren.js"></script>
+
+  <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
+  <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="../js/libs/jquery-1.6.2.min.js"><\/script>')</script> -->
 
 
   <!-- scripts concatenated and minified via ant build script-->
-  <script defer src="js/plugins.js"></script>
-  <script defer src="js/script.js"></script>
+  <script defer src="../js/plugins.js"></script>
+  <script defer src="../js/script.js"></script>
   <!-- end scripts-->
 
 	
