creating individual item pages, updating all pages with links

--- a/collections/index.html
+++ b/collections/index.html
@@ -43,10 +43,10 @@
 
   <div id="container">
     <div id="header">
-		<h1 id="faren"><span>Faren</span></h1>
+		<a href="http://laura.mighty.ca/Faren/"><h1 id="faren"><span>Faren</span></h1></a>
 		<ul id="links">
-			<li><a>COLLECTIONS</a></li>
-			<li><a>STUDIO</a></li>
+			<li><a href="http://laura.mighty.ca/Faren/collections/thumbs.html">COLLECTIONS</a></li>
+			<li><a href="http://laura.mighty.ca/Faren/studio.html">STUDIO</a></li>
 			<li><a>PROFILE</a></li>
 			<li><a>BLOG</a></li>
 		</ul>
@@ -56,11 +56,11 @@
 		   	<li>
 				<div id="spring">
 		   			<h1>SPRING / SUMMER</h1>
-					<div class="years"><a>2009</a> / <a>2010</a> / <a>2011</a></div>
+					<div class="years"><a>2010</a></div>
 				</div>
 				<div id="fall">
 					<h1>FALL / WINTER</h1>
-					<div class="years"><a>2009</a> / <a>2010</a> / <a>2011</a></div>
+					<div class="years"><a>2009</a> / <a>2010</a> / <a>2012</a></div>
 		   		</div>
 			</li>
 			<li>ONE</li>
