--- a/index.html
+++ b/index.html
@@ -41,14 +41,8 @@
     <div id="header">
 		<h1 id="faren"><span>Faren</span></h1>
 		<ul id="links">
-			<li><a>COLLECTIONS</a>
-			<!-- <select>
-			  <option>Milk</option>
-			  <option>Coffee</option>
-			  <option>Tea</option>
-			</select> -->
-			</li>
-			<li><a>STUDIO</a></li>
+			<li><a href="http://laura.mighty.ca/Faren/collections/thumbs.html">COLLECTIONS</a></li>
+			<li><a href="http://laura.mighty.ca/Faren/studio.html">STUDIO</a></li>
 			<li><a>PROFILE</a></li>
 			<li><a>BLOG</a></li>
 		</ul>
