--- a/items/ss2010_2.html
+++ b/items/ss2010_2.html
@@ -58,19 +58,20 @@
 <div id="seasons">
 	<div id="itemnav">
 		<a href="http://laura.mighty.ca/Faren/collections/thumbs.html">BACK</a>
-		<a href="http://laura.mighty.ca/Faren/items/ss2010_2.html" id="last">NEXT</a>
+		<a href="http://laura.mighty.ca/Faren/items/ss2010_1.html">PREVIOUS</a>
+		<a href="http://laura.mighty.ca/Faren/items/ss2010_3.html" id="last">NEXT</a>
 	</div>
 	
     <div id="main" role="main">
 		<div id="ss2010" class="season">
 			<ul id="ss2010_1" class="jcarousel-skin-tango">
-				<li><a href=""><img src="../img/collections/ss2010/1.jpg" alt=""></a></li>
+				<li><a href=""><img src="../img/collections/ss2010/2A.jpg" alt=""></a></li>
+				<li><a href=""><img src="../img/collections/ss2010/2B.jpg" alt=""></a></li>
 			</ul>
 		</div>
 		<div id="info">
 			<h3>FAREN</h3>
-			<p>Multi-layer Vest<br/>Silk mesh Bodysuit<br/>Pants with recycled denim patches
-			</p>
+			<p>Charcoal charmeuse tank with suede neck + rivets</p>
 			<div id="links">
 				<a href="" id="first"><img src="../img/fb.png"></a>	
 				<a href=""><img src="../img/tw.png"></a>	
