--- a/items/ss2010_3.html
+++ b/items/ss2010_3.html
@@ -44,7 +44,7 @@
     <div id="header">
 		<h1 id="faren"><span>Faren</span></h1>
 		<ul id="links">
-			<li><a href="http://laura.mighty.ca/Faren/collections/thumbs.html">COLLECTIONS</a></li>
+			<li><a href="http://laura.mighty.ca/Faren/collections/ss2010.html">COLLECTIONS</a></li>
 			<li><a href="http://laura.mighty.ca/Faren/studio.html">STUDIO</a></li>
 			<li><a>PROFILE</a></li>
 			<li><a>BLOG</a></li>
@@ -58,18 +58,20 @@
 <div id="seasons">
 	<div id="itemnav">
 		<a href="http://laura.mighty.ca/Faren/collections/thumbs.html">BACK</a>
-		<a href="http://laura.mighty.ca/Faren/items/ss2010_2.html" id="last">NEXT</a>
+		<a href="http://laura.mighty.ca/Faren/items/ss2010_2.html">PREVIOUS</a>
+		<a href="http://laura.mighty.ca/Faren/items/ss2010_4.html" id="last">NEXT</a>
 	</div>
 	
     <div id="main" role="main">
 		<div id="ss2010" class="season">
 			<ul id="ss2010_1" class="jcarousel-skin-tango">
-				<li><a href=""><img src="../img/collections/ss2010/1.jpg" alt=""></a></li>
+				<li><a href=""><img src="../img/collections/ss2010/3A.jpg" alt=""></a></li>
+				<li><a href=""><img src="../img/collections/ss2010/3B.jpg" alt=""></a></li>
 			</ul>
 		</div>
 		<div id="info">
 			<h3>FAREN</h3>
-			<p>Multi-layer Vest<br/>Silk mesh Bodysuit<br/>Pants with recycled denim patches
+			<p>Tank with knitted mesh overlay<br/>Sparkle bike shorts
 			</p>
 			<div id="links">
 				<a href="" id="first"><img src="../img/fb.png"></a>	
