--- a/studio.html
+++ b/studio.html
@@ -41,10 +41,10 @@
   <div id="container">
 	<div id="empty">&nbsp;</div>
     <div id="header">
-		<h1 id="faren"><span>Faren</span></h1>
+		<a href="http://laura.mighty.ca/Faren/"><h1 id="faren"><span>Faren</span></h1></a>
 		<ul id="links">
-			<li><a>COLLECTIONS</a></li>
-			<li><a>STUDIO</a></li>
+			<li><a href="http://laura.mighty.ca/Faren/collections/thumbs.html">COLLECTIONS</a></li>
+			<li><a href="http://laura.mighty.ca/Faren/studio.html">STUDIO</a></li>
 			<li><a>PROFILE</a></li>
 			<li><a>BLOG</a></li>
 		</ul>
@@ -53,7 +53,7 @@
 		<div id="videos">
 			<h1>WATCH VIDEOS</h1>
 			<p>Behind the scenes at the Spring/Summer 2010 Lookbook photo shoot.</p>
-			<div id="iframe"><iframe src="http://player.vimeo.com/video/10492302?byline=0&amp;portrait=0" width="440" height="292" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
+			<div id="iframe"><iframe src="http://player.vimeo.com/video/10492302?byline=0&amp;portrait=0" width="420" height="292" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
 		</div>
 		<div id="more">
 			<div id="latest">
@@ -78,14 +78,20 @@
 			</div>
 		</div>
 		<div id="twitter">
-			<h2>TWITTER</h2>
-			<div id="twitter_m">
-		   		<div id="twitter_container">
-		       		<ul id="twitter_update_list"></ul>
+			<div id="feed">
+				<h2>TWITTER</h2>
+				<div id="twitter_m">
+		   			<div id="twitter_container">
+		       			<ul id="twitter_update_list"></ul>
 					<!-- <div id="follow"><p>FOLLOW <a href="">@Faren</a></p> -->
-		   		</div>
+		   			</div>
+				</div>
+			</div>
+			<div id="follow">
+				<a href="">FOLLOW @Faren</a>
 			</div>
 		</div>
+		
     </div>
 	
 	
@@ -109,7 +115,7 @@
 
   <!-- JavaScript at the bottom for fast page loading -->
   <script src="http://twitter.com/javascripts/blogger.js" type="text/javascript"></script>
-  <script src="http://twitter.com/statuses/user_timeline/zachaysan.json?callback=twitterCallback2&count=8" type="text/javascript"></script>
+  <script src="http://twitter.com/statuses/user_timeline/farentami.json?callback=twitterCallback2&count=10" type="text/javascript"></script>
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script>
