updating background on collections landing, links throughout, created individual thumbs page to land on appropriate collection

--- a/collections/index.html
+++ b/collections/index.html
@@ -45,7 +45,7 @@
     <div id="header">
 		<a href="http://laura.mighty.ca/Faren/"><h1 id="faren"><span>Faren</span></h1></a>
 		<ul id="links">
-			<li><a href="http://laura.mighty.ca/Faren/collections/thumbs.html">COLLECTIONS</a></li>
+			<li><a href="http://laura.mighty.ca/Faren/collections/">COLLECTIONS</a></li>
 			<li><a href="http://laura.mighty.ca/Faren/studio.html">STUDIO</a></li>
 			<li><a>PROFILE</a></li>
 			<li><a>BLOG</a></li>
@@ -56,18 +56,18 @@
 		   	<li>
 				<div id="spring">
 		   			<h1>SPRING / SUMMER</h1>
-					<div class="years"><a>2010</a></div>
+					<div class="years"><a href="http://laura.mighty.ca/Faren/collections/thumbs.html">2010</a></div>
 				</div>
 				<div id="fall">
 					<h1>FALL / WINTER</h1>
-					<div class="years"><a>2009</a> / <a>2010</a> / <a>2012</a></div>
+					<div class="years"><a href="http://laura.mighty.ca/Faren/collections/thumbs2.html">2009</a>  <a href="http://laura.mighty.ca/Faren/collections/thumbs3.html">2010</a>  <a href="http://laura.mighty.ca/Faren/collections/thumbs4.html">2012</a></div>
 		   		</div>
 			</li>
-			<li>ONE</li>
-			<li>TWO</li>
-			<li>THREE</li>
-			<li>FOUR</li>
-			<li>FIVE</li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
 		</ul>
 
     </div>
