--- a/items/ss2010_3.html
+++ b/items/ss2010_3.html
@@ -44,7 +44,7 @@
     <div id="header">
 		<h1 id="faren"><span>Faren</span></h1>
 		<ul id="links">
-			<li><a href="http://laura.mighty.ca/Faren/collections/ss2010.html">COLLECTIONS</a></li>
+			<li><a href="http://laura.mighty.ca/Faren/collections/">COLLECTIONS</a></li>
 			<li><a href="http://laura.mighty.ca/Faren/studio.html">STUDIO</a></li>
 			<li><a>PROFILE</a></li>
 			<li><a>BLOG</a></li>
