--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
   <div id="container">
 	<div id="empty">&nbsp;</div>
     <div id="header">
-		<h1 id="faren"><span>Faren</span></h1>
+		<a href="http://laura.mighty.ca/Faren/"><h1 id="faren"><span>Faren</span></h1></a>
 		<ul id="links">
-			<li><a href="http://laura.mighty.ca/Faren/collections/thumbs.html">COLLECTIONS</a></li>
+			<li><a href="http://laura.mighty.ca/Faren/collections/">COLLECTIONS</a></li>
 			<li><a href="http://laura.mighty.ca/Faren/studio.html">STUDIO</a></li>
 			<li><a>PROFILE</a></li>
 			<li><a>BLOG</a></li>
