--- a/items/ss2010_5.html
+++ b/items/ss2010_5.html
@@ -47,7 +47,7 @@
 			<li><a href="http://laura.mighty.ca/Faren/collections/">COLLECTIONS</a></li>
 			<li><a href="http://laura.mighty.ca/Faren/studio.html">STUDIO</a></li>
 			<li><a>PROFILE</a></li>
-			<li><a>BLOG</a></li>
+			<li><a href="http://faren.tumblr.com/">BLOG</a></li>
 		</ul>
     </div>
 
@@ -91,9 +91,9 @@
 		</ul>
 		<ul id="right">
 			<li><a>APP</a></li>
-			<li><a>TWITTER</a></li>
-			<li><a>FACEBOOK</a></li>
-			<li><a>BLOG</a></li>
+			<li><a href="http://twitter.com/#!/farentami">TWITTER</a></li>
+			<li><a href="https://www.facebook.com/pages/Faren/118035878296252">FACEBOOK</a></li>
+			<li><a href="http://faren.tumblr.com/">BLOG</a></li>
 			
 		</ul>
     </footer>
