--- a/collections/thumbs4.html
+++ b/collections/thumbs4.html
@@ -47,7 +47,7 @@
 			<li><a href="http://laura.mighty.ca/Faren/collections/">COLLECTIONS</a></li>
 			<li><a href="http://laura.mighty.ca/Faren/studio.html">STUDIO</a></li>
 			<li><a>PROFILE</a></li>
-			<li><a>BLOG</a></li>
+			<li><a href="http://faren.tumblr.com/">BLOG</a></li>
 		</ul>
     </div>
 
@@ -85,23 +85,23 @@
 	
 		<div id="fw2009" class="season" style="display:none;">
 			<ul id="fw2009carousel" class="jcarousel-skin-tango">
-				<li id="first"><a href=""><img src="../img/collections/fw2009/thumbnails/1.jpg" alt=""></a></li>
-				<li><a href=""><img src="../img/collections/fw2009/thumbnails/2.jpg" alt=""></a></li>
-				<li><a href=""><img src="../img/collections/fw2009/thumbnails/3.jpg" alt=""></a></li>
-				<li><a href=""><img src="../img/collections/fw2009/thumbnails/4.jpg" alt=""></a></li>
-				<li><a href=""><img src="../img/collections/fw2009/thumbnails/5.jpg" alt=""></a></li>
-				<li><a href=""><img src="../img/collections/fw2009/thumbnails/6.jpg" alt=""></a></li>
-				<li><a href=""><img src="../img/collections/fw2009/thumbnails/7.jpg" alt=""></a></li>
-				<li><a href=""><img src="../img/collections/fw2009/thumbnails/8.jpg" alt=""></a></li>
-				<li><a href=""><img src="../img/collections/fw2009/thumbnails/9.jpg" alt=""></a></li>
-				<li><a href=""><img src="../img/collections/fw2009/thumbnails/10.jpg" alt=""></a></li>
-				<li><a href=""><img src="../img/collections/fw2009/thumbnails/11.jpg" alt=""></a></li>
-				<li><a href=""><img src="../img/collections/fw2009/thumbnails/12.jpg" alt=""></a></li>
-				<li><a href=""><img src="../img/collections/fw2009/thumbnails/13.jpg" alt=""></a></li>
-				<li><a href=""><img src="../img/collections/fw2009/thumbnails/14.jpg" alt=""></a></li>
-				<li><a href=""><img src="../img/collections/fw2009/thumbnails/15.jpg" alt=""></a></li>
-				<li><a href=""><img src="../img/collections/fw2009/thumbnails/16.jpg" alt=""></a></li>
-				<li><a href=""><img src="../img/collections/fw2009/thumbnails/17.jpg" alt=""></a></li>
+				<li id="first"><a href="http://laura.mighty.ca/Faren/items/fw2009_1.html"><img src="../img/collections/fw2009/thumbnails/1.jpg" alt=""></a></li>
+				<li><a href="http://laura.mighty.ca/Faren/items/fw2009_2.html"><img src="../img/collections/fw2009/thumbnails/2.jpg" alt=""></a></li>
+				<li><a href="http://laura.mighty.ca/Faren/items/fw2009_3.html"><img src="../img/collections/fw2009/thumbnails/3.jpg" alt=""></a></li>
+				<li><a href="http://laura.mighty.ca/Faren/items/fw2009_4.html"><img src="../img/collections/fw2009/thumbnails/4.jpg" alt=""></a></li>
+				<li><a href="http://laura.mighty.ca/Faren/items/fw2009_5.html"><img src="../img/collections/fw2009/thumbnails/5.jpg" alt=""></a></li>
+				<li><a href="http://laura.mighty.ca/Faren/items/fw2009_6.html"><img src="../img/collections/fw2009/thumbnails/6.jpg" alt=""></a></li>
+				<li><a href="http://laura.mighty.ca/Faren/items/fw2009_7.html"><img src="../img/collections/fw2009/thumbnails/7.jpg" alt=""></a></li>
+				<li><a href="http://laura.mighty.ca/Faren/items/fw2009_8.html"><img src="../img/collections/fw2009/thumbnails/8.jpg" alt=""></a></li>
+				<li><a href="http://laura.mighty.ca/Faren/items/fw2009_9.html"><img src="../img/collections/fw2009/thumbnails/9.jpg" alt=""></a></li>
+				<li><a href="http://laura.mighty.ca/Faren/items/fw2009_10.html"><img src="../img/collections/fw2009/thumbnails/10.jpg" alt=""></a></li>
+				<li><a href="http://laura.mighty.ca/Faren/items/fw2009_11.html"><img src="../img/collections/fw2009/thumbnails/11.jpg" alt=""></a></li>
+				<li><a href="http://laura.mighty.ca/Faren/items/fw2009_12.html"><img src="../img/collections/fw2009/thumbnails/12.jpg" alt=""></a></li>
+				<li><a href="http://laura.mighty.ca/Faren/items/fw2009_13.html"><img src="../img/collections/fw2009/thumbnails/13.jpg" alt=""></a></li>
+				<li><a href="http://laura.mighty.ca/Faren/items/fw2009_14.html"><img src="../img/collections/fw2009/thumbnails/14.jpg" alt=""></a></li>
+				<li><a href="http://laura.mighty.ca/Faren/items/fw2009_15.html"><img src="../img/collections/fw2009/thumbnails/15.jpg" alt=""></a></li>
+				<li><a href="http://laura.mighty.ca/Faren/items/fw2009_16.html"><img src="../img/collections/fw2009/thumbnails/16.jpg" alt=""></a></li>
+				<li><a href="http://laura.mighty.ca/Faren/items/fw2009_17.html"><img src="../img/collections/fw2009/thumbnails/17.jpg" alt=""></a></li>
 			</ul>
 		</div>
 		<div id="fw2010" class="season" style="display:none;">
@@ -148,9 +148,9 @@
 		</ul>
 		<ul id="right">
 			<li><a>APP</a></li>
-			<li><a>TWITTER</a></li>
-			<li><a>FACEBOOK</a></li>
-			<li><a>BLOG</a></li>
+			<li><a href="http://twitter.com/#!/farentami">TWITTER</a></li>
+			<li><a href="https://www.facebook.com/pages/Faren/118035878296252">FACEBOOK</a></li>
+			<li><a href="http://faren.tumblr.com/">BLOG</a></li>
 			
 		</ul>
     </footer>
