--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<li><a href="http://laura.mighty.ca/Faren/collections/">COLLECTIONS</a></li>
 			<li><a href="http://laura.mighty.ca/Faren/studio.html">STUDIO</a></li>
 			<li><a>PROFILE</a></li>
-			<li><a>BLOG</a></li>
+			<li><a href="http://faren.tumblr.com/">BLOG</a></li>
 		</ul>
     </div>
     <div id="main" role="main">
@@ -65,9 +65,9 @@
 		</ul>
 		<ul id="right">
 			<li><a>APP</a></li>
-			<li><a>TWITTER</a></li>
-			<li><a>FACEBOOK</a></li>
-			<li><a>BLOG</a></li>
+			<li><a href="http://twitter.com/#!/farentami">TWITTER</a></li>
+			<li><a href="https://www.facebook.com/pages/Faren/118035878296252">FACEBOOK</a></li>
+			<li><a href="http://faren.tumblr.com/">BLOG</a></li>
 			
 		</ul>
     </footer>
